margin left 40 px fixed to overflow

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1393,7 +1393,7 @@ p { padding-bottom: 0; }
     .expand_close { padding-right: 0;     font-weight: bold; }
     .sign_up_strategy { font-size: 14px; }
     .acc_wrap { width: 93%;     padding: 20px 0; }
-    &.custom_accordion { margin-left: 0;  border-left: 10px solid #e4e4e4;  
+    &.custom_accordion {      margin-left: 40px;   border-left: 10px solid #e4e4e4;  
         p {    font-size: 14px; line-height: 20px; letter-spacing: 0;}
 
     [type="checkbox"]:not(:checked) + label,
